[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "full" ] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
common = { path = "../common" }
argh = "0.1.12"
tokio-rustls = "0.26.0"
rustls-pemfile = "2.1.3"
pki-types = { package = "rustls-pki-types", version = "1" }
webpki-roots = "0.26.3"
log = "0.4"
env_logger = "0.11.3"
futures = "0.3.30"
