[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "full" ] }
trait-variant = "0.1.2"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
