[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.5.0", features = ["serde"] }
tokio = { version = "1", features = [ "full", "rt" ] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
common = { path = "../common" }
regex = "1.10.4"
log = "0.4"
env_logger = "0.11.3"
config = "0.14.0"
serde = "1.0"
serde_yaml = "0.9"
tokio-rustls = "0.26.0"
rustls-pemfile = "2.1.3"
pki-types = { package = "rustls-pki-types", version = "1" }
argh = "0.1.12"
htpasswd-verify = "0.3.0"
http-auth-basic = "0.3.5"
tokio-tungstenite = { version = "0.26.1", features = [ "rustls" ]}
futures-util = { version = "0.3.28", default-features = false, features = [ "sink", "std" ]}
ldap3 = { version = "0.11.5", default-features = false, features = [ "tls-rustls" ] }
const-str = "0.7.0"