[package]
name = "squawkbus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

argh = "0.1.12"
bitflags = { version = "2.5.0", features = ["serde"] }
config = "0.14.0"
env_logger = "0.11.3"
futures-util = { version = "0.3.28", default-features = false, features = [ "sink", "std" ]}
htpasswd-verify = "0.3.0"
http-auth-basic = "0.3.5"
ldap3 = { version = "0.11.5", default-features = false, features = [ "tls-rustls" ] }
log = "0.4"
pki-types = { package = "rustls-pki-types", version = "1" }
rustls-pemfile = "2.1.3"
serde = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = [ "full", "rt" ] }
tokio-rustls = "0.26.0"
tokio-tungstenite = { version = "0.26.1", features = [ "rustls" ]}
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
wildmatch = { version = "2.6.1" }
